replace api key and other info

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 *ProgramB.cs
 indesign-doc-dtd-and-xml/~tagged indesign bo~frk)bx.idlk
 packages
+dotnet-xml-import/.vs/XMLImport/v15/sqlite3/storage.ide
+dotnet-xml-import/XMLImport/obj/Debug/XMLImport.csproj.CoreCompileInputs.cache
